2010-06-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/session.rb: sessioin add-on.

	* lib/gluon/application.rb, lib/gluon/builder.rb, lib/gluon/rs.rb:
	add-on configuration.

2010-05-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: defined builder attributes. builder
	attributes are used in controller class methods to access project
	path (like lib_dir, view_dir, ...).

2010-05-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb: autoid option is
	defined at each HTML element generator.

2010-05-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb: optional prefix for
	autoid is defined at gluon-value.

	* lib/gluon/web/error.rb: parametrized error messages add-on.

	* lib/gluon/web/form.rb: form add-on.

2010-05-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/table.rb: self-descriptive method name for table
	utility.

	* magic comment for runtime ruby scripts.

	* lib/gluon/web/table.rb: each method for loop.

	* lib/gluon/application.rb: `write' method should not be called at
	a response without message body.

2010-05-13  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/table.rb: table utility.

	* lib/gluon/application.rb: logging for non StandardError
	exception.

2010-05-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/token.rb: defined add-on.

	* lib/gluon/web/error.rb: defined add-on.

	* lib/gluon/application.rb, lib/gluon/controller.rb: add-on hooks.

	* lib/gluon/rs.rb: fixed a bug of logging.

2010-03-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/controller.rb: timing of
	passing `path_args' is changed. `path_args' is passed to
	`page_start' of first hook. `page_request' hook takes no arguments
	and default empty `request_GET' hook is defined. in many cases,
	`request_GET' hook may be omitted because it is verbose.

	* lib/gluon/controller.rb: simple syntax is defined for